# verl-recipe

./: .gitignore  README.md
verl_tinker/: README.md  REQUIRED_VERL.txt  pyproject.toml
verl_tinker/client_examples/: README.md  pyproject.toml  run_single_test.py
verl_tinker/client_examples/tasks/: run_single_test.py  run_single_test.sh  utils.py
verl_tinker/client_examples/tasks/math_sft_rl/: gsm8k.py
verl_tinker/launch_scripts/: entrypoint_gpt_oss_20b_actor_rollout.sh  entrypoint_qwen3_1b7_actor.sh  entrypoint_qwen3_1b7_actor_rollout.sh  entrypoint_qwen3_1b7_actor_rollout_ref.sh  entrypoint_qwen3_1b7_actor_rollout_vexact.sh  entrypoint_tinker_server_from_config.sh
verl_tinker/src/verl_tinker/: __init__.py  config_utils.py  logging_utils.py  schemas.py  start.py  tinker_ops.py  tinker_router.py
verl_tinker/src/verl_tinker/backends/: __init__.py  _loss.py  backend_utils.py  colocated.py
verl_tinker/src/verl_tinker/data/: datum_processing.py
